# dreamrtspserver

./: .gitignore  COPYING  README.md  configure.ac
src/: .gitignore  Makefile.am  dreamrtsp.conf  dreamrtspserver.c  dreamrtspserver.h  dreamrtspserver.service  gstdreamrtsp.c
test/: dreamrtspservertest.py  test.py
